--- a/app/src/main/res/layout/activity_entered.xml
+++ b/app/src/main/res/layout/activity_entered.xml
@@ -97,6 +97,17 @@
         android:fontFamily="sans-serif-smallcaps"
         android:textColor="@color/black"
         />
+    <Button
+        android:id="@+id/button_goback"
+        android:layout_width="210dp"
+        android:layout_height="wrap_content"
+        android:text="Return"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_about"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@color/black"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
