--- a/app/src/main/res/menu/dropdown_menu.xml
+++ b/app/src/main/res/menu/dropdown_menu.xml
@@ -5,8 +5,14 @@
     tools:context="com.example.assignment5project.MainActivity">
 
     <item
-        android:id="@+id/about_page"
+        android:id="@+id/home_page"
         android:orderInCategory="100"
+        android:title="@string/home_page"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/about_page"
+        android:orderInCategory="110"
         android:title="@string/about_page"
         app:showAsAction="never" />
 
