--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#67d9ff">
 
 
     <TextView
@@ -31,6 +32,7 @@
         android:layout_marginBottom="45dp"
         android:shadowColor="@color/design_default_color_on_primary"
         android:text="❤"
+        android:textColor="@color/black"
         android:textSize="50sp"
         app:layout_constraintBottom_toTopOf="@+id/edit_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +43,7 @@
     <EditText
         android:id="@+id/edit_text"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="120dp"
         android:fontFamily="sans-serif-smallcaps"
         android:hint="What's your name?"
@@ -50,7 +52,11 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.909" />
+        app:layout_constraintVertical_bias="0.909"
+        android:background="@color/white"
+        android:paddingLeft="@android:dimen/app_icon_size"
+        android:paddingTop="@dimen/cardview_default_elevation"
+        />
 
     <Button
         android:id="@+id/enter_button"
