--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -76,4 +76,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/fetchFilter"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/fab"
+        app:layout_constraintTop_toBottomOf="@id/list_view"
+        android:text="Filter"/>
+    <Button
+        android:id="@+id/allButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fetchFilter"
+        android:text="Show all"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
